tests/basic/good/test23.pepa
// File: tests/good/test23.pepa
// Tests the array syntax plus cooperation.

r = 1.0;
s = 10.0;

P1 = (a, r).P2;
P2 = (b, s).P1; 

P1[3][a]


